Repair headline alignment

--- a/morton.css
+++ b/morton.css
@@ -8,7 +8,7 @@ header 		{	background-color: #db592a;
 				text-align: center;
 				margin-bottom: 0;
 }
-header 	h1 	{	font-size: 6em;
+header 	h1 	{	font-size: 5.5em;
 				clear: left;
 				margin-top: 0;
 				margin-bottom: 0;
